# WebSocketChat

./: .gitignore
back/: Cargo.toml
back/adapter/: Cargo.toml
back/adapter/src/model/: user.rs
back/adapter/src/repository/: user.rs
back/app/: Cargo.toml
back/app/src/model/: user.rs
back/app/src/usecase/: user.rs
back/driver/: Cargo.toml
back/driver/src/: lib.rs  states.rs  user.rs
back/kernel/: Cargo.toml
back/kernel/src/model/: mod.rs  user.rs
back/kernel/src/repository/: user.rs
back/src/: channel.rs  db.rs  main.rs  message.rs  ws.rs
front/: package.json
front/src/features/: api.ts
front/src/pages/: about.tsx  chat.tsx  index.tsx
front/src/pages/chat/: index.tsx
front/src/pages/members/: [id].tsx  index.tsx
front/src/types/: member.ts
