[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
kernel = { path = "../kernel" }
adapter = { path = "../adapter" }

axum = { version = "0.6.15", features = ["ws"] }
